test/coerceTupleArrayLengthMismatch.slq
// args: --run

def main(){
	x:=[1,2,1/2,1/2];
	y:=x coerce !ℕ×!ℕ×!ℚ; // error
	return y;
}
